--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
-.l-box {
-	padding: 1em;
+body {
+	margin: 10px;
+	text-align: center;
+}
+
+h1 {
+	font-size: 24px;
+}
+
+.button-small {
+	font-size: 85%;
 }
