feat: add comment functionality
- Add submitted comments to local storage along with their type, time
  made, and active tab title & url. This information will get displayed
  when viewing session details, and during ending it.
- Remove the is active check and replace it with a get active session
  function. Supersedes by allowing the data to be used aswell.
- Update lets that won't get reassigned into consts.
- Update attachment icon to act as a comment counter instead.

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,18 @@ hr {
 	margin: 0.5rem 0;
 }
 
+.message {
+	display: none;
+	position: fixed;
+	top: 45%;
+	left: 50%;
+	text-transform: capitalize;
+	transform: translate(-50%, -50%);
+	background-color: lightseagreen;
+	color: white;
+	width: 65%;
+}
+
 .comment-box {
 	position: relative;
 }
@@ -38,11 +50,12 @@ hr {
 	width: 35px;
 }
 
-.comment-box #attachment-active {
-	display: none;
+.comment-count {
 	position: absolute;
-	top: 45px;
-	right: 10px;
+	top: 38px;
+	right: 2px;
+	width: 35px;
+	height: 35px;
 }
 
 #button-note {
