feat: add screenshot attachment functionality
- Add <all_urls> permission so we can capture the visible tab for the
  comment attachment.
- Store attached screenshot against the note.
- Refactor message notification to its own function to allow
  reusability.
- Notify user of when a screenshot has been attached, or if it overrides
  the screenshot.
- Add preview attachment functionality for allowing a user to make sure
  the screenshot taken is what they expect.
- Add delete option so a user can remove a screenshot from the comment.
- Move comment count indicator to session actions container as to avoid
  confusion with it being related to the screenshot/attachment feature
- Remove button css as it gets overriden by the classless stylesheet.

--- a/css/popup.css
+++ b/css/popup.css
@@ -8,10 +8,6 @@ h1 {
 	font-size: 24px;
 }
 
-button {
-	border-radius: 4px;
-}
-
 hr {
 	margin: 0;
 }
@@ -43,19 +39,20 @@ hr {
 	width: 260px;
 }
 
-.comment-box #attachment-action {
+.comment-box #button-screenshot {
 	position: absolute;
 	top: 0;
 	right: 0;
 	width: 35px;
 }
 
-.comment-count {
-	position: absolute;
-	top: 38px;
-	right: 2px;
-	width: 35px;
-	height: 35px;
+#attachment-preview {
+	cursor: pointer;
+	text-decoration: underline;
+}
+
+#attachment-delete {
+	cursor: pointer;
 }
 
 #button-note {
