--- a/src/css/view-session.css
+++ b/src/css/view-session.css
@@ -15,6 +15,11 @@ fieldset {
 	padding-bottom: 0px;
 }
 
+textarea {
+	margin-bottom: 1rem;
+	resize: none;
+}
+
 button {
 	margin-right: 0.5rem;
 	margin-bottom: 1rem;
