--- a/src/css/session.css
+++ b/src/css/session.css
@@ -7,7 +7,7 @@ h1 {
 	font-size: 24px;
 }
 
-fieldset {
+fieldset fieldset {
 	padding-bottom: 0px;
 }
 
@@ -18,7 +18,6 @@ textarea {
 
 button {
 	margin-right: 0.5rem;
-	margin-bottom: 1rem;
 }
 
 .container {
