fix: chromium specific issues for compatibility
- Refactor storing of date objects to strings due to chromium browsers
  not supporting storing of Date objects inside of a JSON object for the
  extension.
- Give textarea for the comment element a row count, and style to
  maintain similar design between Firefox and Chromium browsers.

--- a/src/css/session.css
+++ b/src/css/session.css
@@ -13,7 +13,10 @@ fieldset fieldset {
 
 textarea {
 	margin-bottom: 1rem;
+	box-sizing: border-box;
+	overflow-x: hidden;
 	resize: none;
+	width: 60%;
 }
 
 button {
