--- a/src/css/session.css
+++ b/src/css/session.css
@@ -19,6 +19,10 @@ textarea {
 	width: 60%;
 }
 
+input[type="number"] {
+	width: 4em;
+}
+
 button {
 	margin-right: 0.5rem;
 	margin-bottom: 0.5rem;
